Bug 109567 - gzip(1) does not detect my packed file
Summary: gzip(1) does not detect my packed file
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 6.2-STABLE
Hardware: Any Any
: Normal Affects Only Me
Assignee: Xin LI
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-26 14:50 UTC by Oliver Lehmann
Modified: 2009-07-21 05:31 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Lehmann freebsd_committer 2007-02-26 14:50:15 UTC
	since 6.2-STABLE, the shipped FreeBSD gzip does not detect some of my zip
	files (old UNIX man pages)

olivleh1@avocado .man> file scc.1.z
scc.1.z: packed data, 6426 characters originally
olivleh1@avocado .man> gzip --decompress --stdout scc.1.z
gzip: scc.1.z: not in gzip format
Exit 1
olivleh1@avocado .man> gzip --version
FreeBSD gzip 20070126
olivleh1@avocado .man> /usr/local/bin/gzip --decompress --stdout scc.1.z |head -10
.TH SCC 1
.\" @[$]scc.1   1.2
.ad
.fi
.SH NAME
scc \- segmentierter C-Compiler
.SH SYNTAX
.B scc
[-\fBcDEIOpPSU\fR]  \fIfile ...\fR
.SH BESCHREIBUNG
olivleh1@avocado .man> /usr/local/bin/gzip --version
gzip 1.3.9
Copyright (C) 2006 Free Software Foundation, Inc.
Copyright (C) 1993 Jean-loup Gailly.
This is free software.  You may redistribute copies of it under the terms of
the GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
There is NO WARRANTY, to the extent permitted by law.

Written by Jean-loup Gailly.
olivleh1@avocado .man>

How-To-Repeat: 	??
Comment 1 Xin LI freebsd_committer 2007-03-11 10:22:50 UTC
State Changed
From-To: open->feedback

Need a copy of the file in question. 


Comment 2 Xin LI freebsd_committer 2007-03-11 10:22:50 UTC
Responsible Changed
From-To: freebsd-bugs->delphij

Looks like my fault :-)
Comment 3 Oliver Lehmann freebsd_committer 2007-03-11 10:41:17 UTC
I include a compressed file uuencode - hope it gets not mangled
otherwise please tell me. gzip from archivers/gzip should be able
to uncompress it:

olivleh1@kartoffel olivleh1> /usr/local/bin/gzip --decompress \
--stdout yacc.1.Z
.TH YACC 1 WEGA
.\" @[$]yacc.1  1.2
.ad
.fi
.SH NAME
yacc \- Compiler-Compiler
[...]


begin 644 yacc.1.Z
M'QX```=1#````@,)!A(%"0<%`"!E:6YR"BYA8V1M<W1U8F=H;&]Y+4%"1$5(
M24Y04E-<9FMP=G=Z+$-'5'@)*"DO,4]565HG1DM-5UM=(B0R0%A14%"\#`X0
M$8$X!Q02'2HB`'`$`@`0$HK8Q0)`H)4`-*EM2HE*5$!>&AP&%)16QF(AL$(.
M*2?[#!"#BDG^TJ("\0!@T*#@%21)"$5L81)#\!&(DA!$,TJ1)#\!.-M;G+M*
MB`O"!1`(%CQ0P0"QH2E0C`Q;&))H45]PGW#>:^)H5#A<"5^?@FUN<N$D]-;S
M20@,.M`VUN<#YJWOWFO21R[?-&A@YYJ%S`YT7Y<7DH\ZX*2)GX/%YJS.U</.
M(DA"*H+,4PB2'YT7OQ5!V"`P0@XI)_O1YGM_@7ABWMOH'3%V\UAUH&VMSDD2
M0Q%$HNW\B2'XO'>R_B;Z4D3/?WX=:!MK<[$UU6=,-YKNPZT#;6YV+QO'\+DF
ML^7L.])#TL]%_Q$D,11/X61)#]&FYTP2H1G+FDQIJ5#!^11]VA>!T^:]X!.<
M?[,YRZ:?&C7VA&$UP?&\];?6+>V^E)$SW_#T(PFO6?--Q5!V&Q@7]XSWY@7B
M^'//]*2)GYTP21)"$5L81)#TU&!<Q=^L.M`VUN=\7C>/X7)-9\O8=ZP>EGHO
MZ2:'JO6=,$J$#\?PO`8$@=/M\.>?#%O;?2DJ("\"AP4,!0T4-2H8.Q$,W);/
MPE</*5",BJ"S%')+3;<Z89OI*A&;R4UTAZ+>7QHWUO9?Q-@#Y+8VP[-GXJA2
M5",BMC$EXF\M/?Z^!OEAWIB#>_`:"!/UF(-[P.EOK%4'8;&!?WBOOS1B[AZP
M-\L.]4MWI(&@@3]:EN[P/B\3>A;:\,6]M]*2)6Z88M-MS?6*H4E0C(J@LQ3$
ME?;V'3V^O6``CSSVKAY]9OO`V)MR2)9<26;/P-\L.],0;W[VY#FGRPZ"DJ&#
ML1#%4BGXM-MS9^$KAY2H1D5(1@4C!):;;ET;S^;`'2V?O-?".]AU^3(T;F^\
M.7;YHT,%+,YY_K1IJ?->L/Y1"X:/,]X!Y;[>4N/8=P?-GYL;8=@&YUM\82:3
M\P]::S?:0FUN<N$D]Z@^"Z;ZSYIH/O4#E\^"DJ("\)#A0H8*&I5!>(E@#16Q
MBH.*`^16QBEL@_`'%**D(P*1@E1EI15!9BF)49:45068HX"@)WP/YL:-]8JA
M6!OEAWJEN])49:45L8J#B@/D5L8I;(/`L.XHA:_?PE<//I*C+2"(OL$'R8"$
M5L8478%'+M_L,.M""$$2F)1]X(##K0-M;G=*C+2"#Y,!!\F(J6!1$F'RA`[D
M\Z88A!=-7;;0C":]9RYK1IN11]VA:5$!>(#!0L5@X+"!:3^%@8$@=25$!>$C
M`X2-!1`*&`*D3/P>BZSC\WWDWVQ9PU]L6?1IN>=)*`:^V+/@'EOMY2X]AWQ:
M;:F:S?>(0735VU<7FK,^*6A!`F@>?/N"DAXO)1YUGRP[W\'B2+^6'5&C?6,Y
M*:;ZSY8=IK-]X2N'E*AF14A&!2,%)%/Q:;;C>[GM\`?%O5;S4F_#^;SZU2PZ
M&*H.Q""[@]%QB!^]WY8=#%O;?2DJ("\*&#2`0+'AQ0T!06-"10U(RMYKNQO-
MYGKUA,WV00M'$UU6-/\L.+^82;I<[VFHWO-)4(R*V,2.M`OWORR<)*Y_FE)`
!!```
`
end
Comment 4 Xin LI freebsd_committer 2007-03-15 07:35:10 UTC
State Changed
From-To: feedback->open

Feedback received.
Comment 5 Xin LI freebsd_committer 2009-02-18 22:22:18 UTC
State Changed
From-To: open->feedback

Dear submitter, 

I have done a preliminary implementation for 'pack' files, but I do not 
have many packed files at hand.  Could you please point me to some so 
I can test the code more throughly? 

Thanks in advance!
Comment 6 Oliver Lehmann freebsd_committer 2009-02-19 19:15:55 UTC
Hi,

please take

http://files.pofo.de/src.tar.gz

which contains more packed files - If you even need more or different one
just tell me... I can pack you nearly everything ;)
Comment 7 dfilter service freebsd_committer 2009-06-21 10:39:54 UTC
Author: delphij
Date: Sun Jun 21 09:39:43 2009
New Revision: 194579
URL: http://svn.freebsd.org/changeset/base/194579

Log:
  Add support for uncompressing pack(1)'ed files.  Pack(1) is a program found
  in some commercial Unix systems, which utilizes Huffman minimum redundancy
  code tree to compress files.  This implementation supports the "new" pack
  format only, just like GNU gzip did.
  
  Thanks for oliver@'s archive set which I can test against, and Mingyan Guo
  for providing helpful review of my code.
  
  PR:		bin/109567
  MFC after:	1 month

Added:
  head/usr.bin/gzip/unpack.c   (contents, props changed)
Modified:
  head/usr.bin/gzip/gzip.c

Modified: head/usr.bin/gzip/gzip.c
==============================================================================
--- head/usr.bin/gzip/gzip.c	Sun Jun 21 09:01:12 2009	(r194578)
+++ head/usr.bin/gzip/gzip.c	Sun Jun 21 09:39:43 2009	(r194579)
@@ -79,6 +79,9 @@ enum filetype {
 #ifndef NO_COMPRESS_SUPPORT
 	FT_Z,
 #endif
+#ifndef NO_PACK_SUPPORT
+	FT_PACK,
+#endif
 	FT_LAST,
 	FT_UNKNOWN
 };
@@ -95,6 +98,10 @@ enum filetype {
 #define Z_MAGIC		"\037\235"
 #endif
 
+#ifndef NO_PACK_SUPPORT
+#define PACK_MAGIC	"\037\036"
+#endif
+
 #define GZ_SUFFIX	".gz"
 
 #define BUFLEN		(64 * 1024)
@@ -143,7 +150,7 @@ static suffixes_t suffixes[] = {
 };
 #define NUM_SUFFIXES (sizeof suffixes / sizeof suffixes[0])
 
-static	const char	gzip_version[] = "FreeBSD gzip 20070711";
+static	const char	gzip_version[] = "FreeBSD gzip 20090621";
 
 #ifndef SMALL
 static	const char	gzip_copyright[] = \
@@ -248,6 +255,10 @@ static	FILE 	*zdopen(int);
 static	off_t	zuncompress(FILE *, FILE *, char *, size_t, off_t *);
 #endif
 
+#ifndef NO_PACK_SUPPORT
+static	off_t	unpack(int, int, char *, size_t, off_t *);
+#endif
+
 int main(int, char **p);
 
 #ifdef SMALL
@@ -1104,6 +1115,11 @@ file_gettype(u_char *buf)
 		return FT_Z;
 	else
 #endif
+#ifndef NO_PACK_SUPPORT
+	if (memcmp(buf, PACK_MAGIC, 2) == 0)
+		return FT_PACK;
+	else
+#endif
 		return FT_UNKNOWN;
 }
 
@@ -1458,6 +1474,17 @@ file_uncompress(char *file, char *outfil
 	} else
 #endif
 
+#ifndef NO_PACK_SUPPORT
+	if (method == FT_PACK) {
+		if (lflag) {
+			maybe_warnx("no -l with packed files");
+			goto lose;
+		}
+
+		size = unpack(fd, zfd, NULL, 0, NULL);
+	} else
+#endif
+
 #ifndef SMALL
 	if (method == FT_UNKNOWN) {
 		if (lflag) {
@@ -1651,6 +1678,12 @@ handle_stdin(void)
 		fclose(in);
 		break;
 #endif
+#ifndef NO_PACK_SUPPORT
+	case FT_PACK:
+		usize = unpack(STDIN_FILENO, STDOUT_FILENO,
+			       (char *)header1, sizeof header1, &gsize);
+		break;
+#endif
 	}
 
 #ifndef SMALL
@@ -2038,6 +2071,9 @@ display_version(void)
 #ifndef NO_COMPRESS_SUPPORT
 #include "zuncompress.c"
 #endif
+#ifndef NO_PACK_SUPPORT
+#include "unpack.c"
+#endif
 
 static ssize_t
 read_retry(int fd, void *buf, size_t sz)

Added: head/usr.bin/gzip/unpack.c
==============================================================================
--- /dev/null	00:00:00 1970	(empty, because file is newly added)
+++ head/usr.bin/gzip/unpack.c	Sun Jun 21 09:39:43 2009	(r194579)
@@ -0,0 +1,322 @@
+/*-
+ * Copyright (c) 2009 Xin LI <delphij@FreeBSD.org>
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ * ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE
+ * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
+ * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+ * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
+ * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+ * SUCH DAMAGE.
+ *
+ * $FreeBSD$
+ */
+
+/* This file is #included by gzip.c */
+
+/*
+ * pack(1) file format:
+ *
+ * The first 7 bytes is the header:
+ *	00, 01 - Signature (US, RS), we already validated it earlier.
+ *	02..05 - Uncompressed size
+ *	    06 - Level for the huffman tree (<=24)
+ *
+ * pack(1) will then store symbols (leaf) nodes count in each huffman
+ * tree levels, each level would consume 1 byte (See [1]).
+ *
+ * After the symbol count table, there is the symbol table, storing
+ * symbols represented by coresponding leaf node.  EOB is not being
+ * explicitly transmitted (not necessary anyway) in the symbol table.
+ *
+ * Compressed data goes after the symbol table.
+ *
+ * NOTES
+ *
+ * [1] If we count EOB into the symbols, that would mean that we will
+ * have at most 256 symbols in the huffman tree.  pack(1) rejects empty
+ * file and files that just repeats one character, which means that we
+ * will have at least 2 symbols.  Therefore, pack(1) would reduce the
+ * last level symbol count by 2 which makes it a number in
+ * range [0..254], so all levels' symbol count would fit into 1 byte.
+ */
+
+#define	PACK_HEADER_LENGTH	7
+#define	HTREE_MAXLEVEL		24
+
+/*
+ * unpack descriptor
+ *
+ * Represent the huffman tree in a similiar way that pack(1) would
+ * store in a packed file.  We store all symbols in a linear table,
+ * and store pointers to each level's first symbol.  In addition to
+ * that, maintain two counts for each level: inner nodes count and
+ * leaf nodes count.
+ */
+typedef struct {
+	int		symbol_size;	/* Size of the symbol table */
+	int		treelevels;	/* Levels for the huffman tree */
+
+	int		*symbolsin;	/* Table of leaf symbols count in
+					   each level */
+	int		*inodesin;	/* Table of internal nodes count in
+					   each level */
+
+	char		*symbol;	/* The symbol table */
+	char		*symbol_eob;	/* Pointer to the EOB symbol */
+	char		**tree;		/* Decoding huffman tree (pointers to
+					   first symbol of each tree level */
+
+	off_t		uncompressed_size; /* Uncompressed size */
+	FILE		*fpIn;		/* Input stream */
+	FILE		*fpOut;		/* Output stream */
+} unpack_descriptor_t;
+
+/*
+ * Release resource allocated to an unpack descriptor.
+ *
+ * Caller is responsible to make sure that all of these pointers are
+ * initialized (in our case, they all point to valid memory block).
+ * We don't zero out pointers here because nobody else would ever
+ * reference the memory block without scrubing them.
+ */
+static void
+unpack_descriptor_fini(unpack_descriptor_t *unpackd)
+{
+
+	free(unpackd->symbolsin);
+	free(unpackd->inodesin);
+	free(unpackd->symbol);
+	free(unpackd->tree);
+
+	fclose(unpackd->fpIn);
+	fclose(unpackd->fpOut);
+}
+
+/*
+ * Recursively fill the internal node count table
+ */
+static void
+unpackd_fill_inodesin(const unpack_descriptor_t *unpackd, int level)
+{
+
+	/*
+	 * The internal nodes would be 1/2 of total internal nodes and
+	 * leaf nodes in the next level.  For the last level there
+	 * would be no internal node by defination.
+	 */
+	if (level < unpackd->treelevels) {
+		unpackd_fill_inodesin(unpackd, level + 1);
+		unpackd->inodesin[level] = (unpackd->inodesin[level + 1] +
+					  unpackd->symbolsin[level + 1]) / 2;
+	} else
+		unpackd->inodesin[level] = 0;
+}
+
+/*
+ * Update counter for accepted bytes
+ */
+static void
+accepted_bytes(off_t *bytes_in, off_t newbytes)
+{
+
+	if (bytes_in != NULL)
+		(*bytes_in) += newbytes;
+}
+
+/*
+ * Read file header and construct the tree.  Also, prepare the buffered I/O
+ * for decode rountine.
+ *
+ * Return value is uncompressed size.
+ */
+static void
+unpack_parse_header(int in, int out, char *pre, size_t prelen, off_t *bytes_in,
+    unpack_descriptor_t *unpackd)
+{
+	unsigned char hdr[PACK_HEADER_LENGTH];	/* buffer for header */
+	ssize_t bytesread;		/* Bytes read from the file */
+	int i, j, thisbyte;
+
+	/* Prepend the header buffer if we already read some data */
+	if (prelen != 0)
+		memcpy(hdr, pre, prelen);
+
+	/* Read in and fill the rest bytes of header */
+	bytesread = read(in, hdr + prelen, PACK_HEADER_LENGTH - prelen);
+	if (bytesread < 0)
+		maybe_err("Error reading pack header");
+
+	accepted_bytes(bytes_in, PACK_HEADER_LENGTH);
+
+	/* Obtain uncompressed length (bytes 2,3,4,5)*/
+	unpackd->uncompressed_size = 0;
+	for (i = 2; i <= 5; i++) {
+		unpackd->uncompressed_size <<= 8;
+		unpackd->uncompressed_size |= hdr[i];
+	}
+
+	/* Get the levels of the tree */
+	unpackd->treelevels = hdr[6];
+	if (unpackd->treelevels > HTREE_MAXLEVEL || unpackd->treelevels < 1)
+		maybe_errx("Huffman tree has insane levels");
+
+	/* Let libc take care for buffering from now on */
+	if ((unpackd->fpIn = fdopen(in, "r")) == NULL)
+		maybe_err("Can not fdopen() input stream");
+	if ((unpackd->fpOut = fdopen(out, "w")) == NULL)
+		maybe_err("Can not fdopen() output stream");
+
+	/* Allocate for the tables of bounds and the tree itself */
+	unpackd->inodesin =
+	    calloc(unpackd->treelevels, sizeof(*(unpackd->inodesin)));
+	unpackd->symbolsin =
+	    calloc(unpackd->treelevels, sizeof(*(unpackd->symbolsin)));
+	unpackd->tree =
+	    calloc(unpackd->treelevels, (sizeof (*(unpackd->tree))));
+	if (unpackd->inodesin == NULL || unpackd->symbolsin == NULL ||
+	    unpackd->tree == NULL)
+		maybe_err("calloc");
+
+	/* We count from 0 so adjust to match array upper bound */
+	unpackd->treelevels--;
+
+	/* Read the levels symbol count table and caculate total */
+	unpackd->symbol_size = 1;		/* EOB */
+	for (i = 0; i <= unpackd->treelevels; i++) {
+		if ((thisbyte = fgetc(unpackd->fpIn)) == EOF)
+			maybe_err("File appears to be truncated");
+		unpackd->symbolsin[i] = (unsigned char)thisbyte;
+		unpackd->symbol_size += unpackd->symbolsin[i];
+	}
+	accepted_bytes(bytes_in, unpackd->treelevels);
+	if (unpackd->symbol_size > 256)
+		maybe_errx("Bad symbol table");
+
+	/* Allocate for the symbol table, point symbol_eob at the beginning */
+	unpackd->symbol_eob = unpackd->symbol = calloc(1, unpackd->symbol_size);
+	if (unpackd->symbol == NULL)
+		maybe_err("calloc");
+
+	/*
+	 * Read in the symbol table, which contain [2, 256] symbols.
+	 * In order to fit the count in one byte, pack(1) would offset
+	 * it by reducing 2 from the actual number from the last level.
+	 *
+	 * We adjust the last level's symbol count by 1 here, because
+	 * the EOB symbol is not being transmitted explicitly.  Another
+	 * adjustment would be done later afterward.
+	 */
+	unpackd->symbolsin[unpackd->treelevels]++;
+	for (i = 0; i <= unpackd->treelevels; i++) {
+		unpackd->tree[i] = unpackd->symbol_eob;
+		for (j = 0; j < unpackd->symbolsin[i]; j++) {
+			if ((thisbyte = fgetc(unpackd->fpIn)) == EOF)
+				maybe_errx("Symbol table truncated");
+			*unpackd->symbol_eob++ = (char)thisbyte;
+		}
+		accepted_bytes(bytes_in, unpackd->symbolsin[i]);
+	}
+
+	/* Now, take account for the EOB symbol as well */
+	unpackd->symbolsin[unpackd->treelevels]++;
+
+	/*
+	 * The symbolsin table has been constructed now.
+	 * Caculate the internal nodes count table based on it.
+	 */
+	unpackd_fill_inodesin(unpackd, 0);
+}
+
+/*
+ * Decode huffman stream, based on the huffman tree.
+ */
+static void
+unpack_decode(const unpack_descriptor_t *unpackd, off_t *bytes_in)
+{
+	int thislevel, thiscode, thisbyte, inlevelindex;
+	int i;
+	off_t bytes_out = 0;
+	const char *thissymbol;	/* The symbol pointer decoded from stream */
+
+	/*
+	 * Decode huffman.  Fetch every bytes from the file, get it
+	 * into 'thiscode' bit-by-bit, then output the symbol we got
+	 * when one has been found.
+	 *
+	 * Assumption: sizeof(int) > ((max tree levels + 1) / 8).
+	 * bad things could happen if not.
+	 */
+	thislevel = 0;
+	thiscode = thisbyte = 0;
+
+	while ((thisbyte = fgetc(unpackd->fpIn)) != EOF) {
+		accepted_bytes(bytes_in, 1);
+
+		/*
+		 * Split one bit from thisbyte, from highest to lowest,
+		 * feed the bit into thiscode, until we got a symbol from
+		 * the tree.
+		 */
+		for (i = 7; i >= 0; i--) {
+			thiscode = (thiscode << 1) | ((thisbyte >> i) & 1);
+
+			/* Did we got a symbol? (referencing leaf node) */
+			if (thiscode >= unpackd->inodesin[thislevel]) {
+				inlevelindex =
+				    thiscode - unpackd->inodesin[thislevel];
+				if (inlevelindex > unpackd->symbolsin[thislevel])
+					maybe_errx("File corrupt");
+
+				thissymbol =
+				    &(unpackd->tree[thislevel][inlevelindex]);
+				if ((thissymbol == unpackd->symbol_eob) &&
+				    (bytes_out == unpackd->uncompressed_size))
+					goto finished;
+
+				fputc((*thissymbol), unpackd->fpOut);
+				bytes_out++;
+
+				/* Prepare for next input */
+				thislevel = 0; thiscode = 0;
+			} else {
+				thislevel++;
+				if (thislevel > unpackd->treelevels)
+					maybe_errx("File corrupt");
+			}
+		}
+	}
+
+finished:
+	if (bytes_out != unpackd->uncompressed_size)
+		maybe_errx("Premature EOF");
+}
+
+/* Handler for pack(1)'ed file */
+static off_t
+unpack(int in, int out, char *pre, size_t prelen, off_t *bytes_in)
+{
+	unpack_descriptor_t	unpackd;
+
+	unpack_parse_header(dup(in), dup(out), pre, prelen, bytes_in, &unpackd);
+	unpack_decode(&unpackd, bytes_in);
+	unpack_descriptor_fini(&unpackd);
+
+	/* If we reached here, the unpack was successful */
+	return (unpackd.uncompressed_size);
+}
+
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"
Comment 8 Xin LI freebsd_committer 2009-06-21 10:42:59 UTC
State Changed
From-To: feedback->patched

I have committed the unpack functionality against -HEAD.
Comment 9 Xin LI freebsd_committer 2009-07-21 05:30:46 UTC
State Changed
From-To: patched->closed

Patch MFC'ed into 7-STABLE and 6-STABLE.