Add support for uncompressing pack(1)'ed files.  Pack(1) is a program found in some commercial Unix systems, which utilizes Huffman minimum redundancy code tree to compress files.  This implementation supports the "new" pack format only, just like GNU gzip did.

Thanks for oliver@'s archive set which I can test against, and Mingyan Guo
for providing helpful review of my code.

PR:		bin/109567
MFC after:	1 month