usr.bin/gzip/gzip.c
@@ -79,6 +79,9 @@ enum filetype {
 #ifndef NO_COMPRESS_SUPPORT
 	FT_Z,
 #endif
+#ifndef NO_PACK_SUPPORT
+	FT_PACK,
+#endif
 	FT_LAST,
 	FT_UNKNOWN
 };
@@ -93,6 +96,10 @@ enum filetype {
 #ifndef NO_COMPRESS_SUPPORT
 #define Z_SUFFIX	".Z"
 #define Z_MAGIC		"\037\235"
+#endif
+
+#ifndef NO_PACK_SUPPORT
+#define PACK_MAGIC	"\037\036"
 #endif
 
 #define GZ_SUFFIX	".gz"
@@ -143,7 +150,7 @@ static suffixes_t suffixes[] = {
 };
 #define NUM_SUFFIXES (sizeof suffixes / sizeof suffixes[0])
 
-static	const char	gzip_version[] = "FreeBSD gzip 20070711";
+static	const char	gzip_version[] = "FreeBSD gzip 20090621";
 
 #ifndef SMALL
 static	const char	gzip_copyright[] = \
@@ -246,6 +253,10 @@ static	off_t	unbzip2(int, int, char *, size_t, off_t *);
 #ifndef NO_COMPRESS_SUPPORT
 static	FILE 	*zdopen(int);
 static	off_t	zuncompress(FILE *, FILE *, char *, size_t, off_t *);
+#endif
+
+#ifndef NO_PACK_SUPPORT
+static	off_t	unpack(int, int, char *, size_t, off_t *);
 #endif
 
 int main(int, char **p);
@@ -1104,6 +1115,11 @@ file_gettype(u_char *buf)
 		return FT_Z;
 	else
 #endif
+#ifndef NO_PACK_SUPPORT
+	if (memcmp(buf, PACK_MAGIC, 2) == 0)
+		return FT_PACK;
+	else
+#endif
 		return FT_UNKNOWN;
 }
 
@@ -1458,6 +1474,17 @@ file_uncompress(char *file, char *outfile, size_t outsize)
 	} else
 #endif
 
+#ifndef NO_PACK_SUPPORT
+	if (method == FT_PACK) {
+		if (lflag) {
+			maybe_warnx("no -l with packed files");
+			goto lose;
+		}
+
+		size = unpack(fd, zfd, NULL, 0, NULL);
+	} else
+#endif
+
 #ifndef SMALL
 	if (method == FT_UNKNOWN) {
 		if (lflag) {
@@ -1649,6 +1676,12 @@ handle_stdin(void)
 
 		usize = zuncompress(in, stdout, (char *)header1, sizeof header1, &gsize);
 		fclose(in);
+		break;
+#endif
+#ifndef NO_PACK_SUPPORT
+	case FT_PACK:
+		usize = unpack(STDIN_FILENO, STDOUT_FILENO,
+			       (char *)header1, sizeof header1, &gsize);
 		break;
 #endif
 	}
@@ -2037,6 +2070,9 @@ display_version(void)
 #endif
 #ifndef NO_COMPRESS_SUPPORT
 #include "zuncompress.c"
+#endif
+#ifndef NO_PACK_SUPPORT
+#include "unpack.c"
 #endif
 
 static ssize_t
